--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -4,6 +4,22 @@ mat-drawer-container {
   & mat-drawer {
     display: flex;
     flex-direction: column;
-    width: 20vw;
+    width: 55vw;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  mat-drawer-container {
+    & mat-drawer {
+      width: 25vw;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  mat-drawer-container {
+    & mat-drawer {
+      width: 20vw;
+    }
   }
 }
