--- a/src/app/components/main-page/product-items/product-items.component.scss
+++ b/src/app/components/main-page/product-items/product-items.component.scss
@@ -5,8 +5,12 @@ mat-toolbar {
   top: 0;
   z-index: 10;
 
+  & div {
+    display: flex;
+  }
+
   & button {
-    font-size: 1.1em;
+    font-size: 1em;
   }
 }
 
@@ -16,7 +20,6 @@ mat-spinner {
 
 mat-card {
   margin: 0.5em;
-  padding: 1em;
   display: flex;
   justify-content: space-between;
 
@@ -52,12 +55,6 @@ mat-card {
   }
 }
 
-section {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  margin: 0.5em;
-}
-
 picture {
   display: flex;
   justify-content: center;
@@ -66,5 +63,41 @@ picture {
     width: 100%;
     max-width: 500px;
     max-height: 500px;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .toogle-sidenav {
+    visibility: hidden;
+    width: 0;
+    height: 0;
+  }
+
+  mat-card {
+    padding: 1em;
+  }
+
+  mat-toolbar {
+    & button {
+      font-size: 1.1em;
+    }
+  }
+
+  section {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 0.5em;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  section {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media screen and (min-width: 1800px) {
+  section {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 }
