--- a/src/app/components/product/edit-product/edit-product.component.html
+++ b/src/app/components/product/edit-product/edit-product.component.html
@@ -15,10 +15,7 @@
 
     <mat-form-field>
       <mat-label>Price</mat-label>
-      <input matInput formControlName="price"/>
-      <mat-error *ngIf="model.controls.price.errors && model.controls.price.errors['pattern']">
-        Number Only
-      </mat-error>
+      <input matInput type="number" formControlName="price"/>
     </mat-form-field>
   </mat-card-content>
   <mat-card-actions>
